--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "https://github.com/vencax/netlify-cms-github-oauth-provider",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "startdbg": "node --inspect-brk app.js"
