--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     
     "test": "echo \"Error: no test specified\" && exit 1",
+    console.log("ORIGINS ENV:", process.env.ORIGINS);
+
     "start": "node app.js",
     "startdbg": "node --inspect-brk app.js"
   },
