--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
-{
+{"dependencies": {
+  "express": "^4.18.2",
+  "express-session": "^1.17.3",
+  "passport": "^0.7.0",
+  "passport-github2": "^0.1.12",
+  "cors": "^2.8.5",
+  "body-parser": "^1.20.2"
+}
+
   "name": "netlify-cms-github-oauth-provider",
   "version": "1.1.0",
   "engines": {
